--- a/app.css
+++ b/app.css
@@ -1,8 +1,19 @@
-﻿body {
-    font-family: 'Segoe UI', sans-serif;
-    margin: 0;
-}
+﻿
 
-span {
-    font-style: italic;
+body {
+    margin: 0;
+    overflow: hidden;
+    background-color: black;
+}
+    
+#content {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+    
+canvas {
+    width: 100%;
+    height: 100%;
 }
